--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>---THIS IS MY IMAGES SERVER---</h1>
-    ---THIS IS MY IMAGES SERVER---
+    ---THIS IS ROSHAN'S IMAGES SERVER---
     <script src="script.js"></script>
   </body>
 </html>
